// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`User DTOs - Snapshot Tests DeleteUserImageDto should fail validation for invalid imageId type 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isInt": "imageId must be an integer number",
    },
    "property": "imageId",
    "target": DeleteUserImageDto {
      "imageId": "not-a-number",
    },
    "value": "not-a-number",
  },
]
`;

exports[`User DTOs - Snapshot Tests DeleteUserImageDto should fail validation for missing imageId 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isInt": "imageId must be an integer number",
      "isNotEmpty": "imageId should not be empty",
    },
    "property": "imageId",
    "target": DeleteUserImageDto {
      "imageId": undefined,
    },
    "value": undefined,
  },
]
`;

exports[`User DTOs - Snapshot Tests DeleteUserImageDto should match snapshot for valid data 1`] = `
DeleteUserImageDto {
  "imageId": 123,
}
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should fail validation for empty name 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isNotEmpty": "name should not be empty",
    },
    "property": "name",
    "target": UpdateUserDto {
      "email": undefined,
      "images": undefined,
      "name": "",
      "phoneNumber": "+919876543210",
      "upiVpa": undefined,
    },
    "value": "",
  },
]
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should fail validation for invalid UPI VPA format 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "matches": "Invalid UPI VPA format. Expected format: user@bank",
    },
    "property": "upiVpa",
    "target": UpdateUserDto {
      "email": undefined,
      "images": undefined,
      "name": "Test User",
      "phoneNumber": "+919876543210",
      "upiVpa": "invalid-upi",
    },
    "value": "invalid-upi",
  },
]
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should fail validation for invalid email 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isEmail": "email must be an email",
    },
    "property": "email",
    "target": UpdateUserDto {
      "email": "invalid-email",
      "images": undefined,
      "name": "Test User",
      "phoneNumber": "+919876543210",
      "upiVpa": undefined,
    },
    "value": "invalid-email",
  },
]
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should fail validation for invalid phone format 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "matches": "Phone number must be in E.164 format (e.g., +919876543210)",
    },
    "property": "phoneNumber",
    "target": UpdateUserDto {
      "email": undefined,
      "images": undefined,
      "name": "Test User",
      "phoneNumber": "9876543210",
      "upiVpa": undefined,
    },
    "value": "9876543210",
  },
]
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should fail validation for missing required fields 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isNotEmpty": "name should not be empty",
      "isString": "name must be a string",
    },
    "property": "name",
    "target": UpdateUserDto {
      "email": undefined,
      "images": undefined,
      "name": undefined,
      "phoneNumber": undefined,
      "upiVpa": undefined,
    },
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isNotEmpty": "phoneNumber should not be empty",
      "isString": "phoneNumber must be a string",
      "matches": "Phone number must be in E.164 format (e.g., +919876543210)",
    },
    "property": "phoneNumber",
    "target": UpdateUserDto {
      "email": undefined,
      "images": undefined,
      "name": undefined,
      "phoneNumber": undefined,
      "upiVpa": undefined,
    },
    "value": undefined,
  },
]
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should match snapshot for minimal valid data 1`] = `
UpdateUserDto {
  "email": undefined,
  "images": undefined,
  "name": "Jane Doe",
  "phoneNumber": "+15551234567",
  "upiVpa": undefined,
}
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should match snapshot for valid complete data 1`] = `
UpdateUserDto {
  "email": "john@example.com",
  "images": Array [
    "https://example.com/image1.jpg",
    "https://example.com/image2.jpg",
  ],
  "name": "John Doe",
  "phoneNumber": "+919876543210",
  "upiVpa": "john@paytm",
}
`;

exports[`User DTOs - Snapshot Tests UpdateUserDto should match snapshot with empty images array 1`] = `
UpdateUserDto {
  "email": undefined,
  "images": Array [],
  "name": "Test User",
  "phoneNumber": "+919876543210",
  "upiVpa": undefined,
}
`;
